# presence-detection

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  makefile  sdkconfig.defaults
.cargo/: config.toml
plans/: bthome_refactor.md
src/: broker.rs  config.rs  main.rs  network.rs  peripherals.rs  report.rs  sensors.rs
