[package]
name = "presence-detection"
version = "0.1.0"
authors = ["Max van der Schee <26795741+mvdschee@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.90"

[[bin]]
name = "presence-detection"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
# Error handling
thiserror = "2.0.18"
anyhow = "1.0.100"

# Logging
log = "0.4"

# ESP wrappers
esp-idf-svc = "0.51"

# Driver
ld2410s = { git = "https://github.com/mvdschee/ld2410s.git", tag = "v0.1.2", features = [
	"embedded",
] }

[build-dependencies]
embuild = "0.33"
dotenvy = "0.15.7"
